--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
         <button>*</button>
         <button>⌫</button>
 
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
+        <button onclick="appendnumber('7')">7</button>
+        <button onclick="appendnumber('8')">8</button>
+        <button onclick="appendnumber('9')">9</button>
         <button>-</button>
 
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
+        <button onclick="appendnumber('4')">4</button>
+        <button onclick="appendnumber('5')">5</button>
+        <button onclick="appendnumber('6')">6</button>
         <button>+</button>
 
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
+        <button onclick="appendnumber('1')">1</button>
+        <button onclick="appendnumber('2')">2</button>
+        <button onclick="appendnumber('3')">3</button>
         <button>=</button>
 
         <button>0</button>
